--- a/.github/workflows/grs.yml
+++ b/.github/workflows/grs.yml
@@ -8,21 +8,58 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+
+    permissions:
+      contents: write
+
     steps:
       - uses: actions/checkout@v4
 
+      - name: Ensure output dir
+        run: mkdir -p profile
+
+      # --- GitHub Readme Stats (self-hosted as files in your repo) ---
       - name: Generate stats card
         uses: readme-tools/github-readme-stats-action@v1
         with:
           card: stats
-          options: username=${{ github.repository_owner }}&show_icons=true
+          options: username=${{ github.repository_owner }}&show_icons=true&locale=en
           path: profile/stats.svg
           token: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Generate top languages card
+        uses: readme-tools/github-readme-stats-action@v1
+        with:
+          card: top-langs
+          options: username=${{ github.repository_owner }}&show_icons=true&locale=en&layout=compact
+          path: profile/top-langs.svg
+          token: ${{ secrets.GITHUB_TOKEN }}
+
+      # --- Trophy (download SVG and commit it) ---
+      - name: Download trophies card
+        run: |
+          curl -fsSL \
+            "https://github-profile-trophy.vercel.app/?username=${{ github.repository_owner }}&theme=onedark&margin-w=10&margin-h=10&column=2" \
+            -o profile/trophies.svg
+
+      # --- Streak (download SVG and commit it) ---
+      - name: Download streak card
+        run: |
+          curl -fsSL \
+            "https://streak-stats.demolab.com/?user=${{ github.repository_owner }}" \
+            -o profile/streak.svg
+
+      # --- 42 badge (optional: uncomment if you want to snapshot it too) ---
+      # - name: Download 42 badge
+      #   run: |
+      #     curl -fsSL \
+      #       "https://badge.mediaplus.ma/greenbinary/masenjo" \
+      #       -o profile/42.svg
+
       - name: Commit cards
         run: |
-          git config user.name "github-actions"
-          git config user.email "github-actions@users.noreply.github.com"
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add profile/*.svg
           git commit -m "Update README cards" || exit 0
           git push
