--- a/.github/workflows/grs.yml
+++ b/.github/workflows/grs.yml
@@ -2,15 +2,20 @@ name: Update README cards
 
 on:
   schedule:
-    - cron: "0 3 * * *"
+    # Para evitar choque con snake (que está a las 03:00)
+    - cron: "10 3 * * *"
   workflow_dispatch:
+
+permissions:
+  contents: write
+
+concurrency:
+  group: profile-assets
+  cancel-in-progress: true
 
 jobs:
   build:
     runs-on: ubuntu-latest
-
-    permissions:
-      contents: write
 
     steps:
       - uses: actions/checkout@v4
@@ -18,44 +23,42 @@ jobs:
       - name: Ensure output dir
         run: mkdir -p profile
 
-      # --- GitHub Readme Stats (self-hosted as files in your repo) ---
-      - name: Generate stats card
-        uses: readme-tools/github-readme-stats-action@v1
-        with:
-          card: stats
-          options: username=${{ github.repository_owner }}&show_icons=true&locale=en
-          path: profile/stats.svg
-          token: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Generate top languages card
-        uses: readme-tools/github-readme-stats-action@v1
-        with:
-          card: top-langs
-          options: username=${{ github.repository_owner }}&show_icons=true&locale=en&layout=compact
-          path: profile/top-langs.svg
-          token: ${{ secrets.GITHUB_TOKEN }}
-
-      # --- Trophy (download SVG and commit it) ---
-      - name: Download trophies card
+      - name: Download cards (trophies, stats, langs, streak)
+        env:
+          USERNAME: ${{ github.repository_owner }}
         run: |
-          curl -fsSL "https://github-profile-trophy.vercel.app/?username=${{ github.repository_owner }}&theme=onedark&margin-w=10&margin-h=10&column=2" -o profile/trophies.svg
+          set -euxo pipefail
 
-      # --- Streak (download SVG and commit it) ---
-      - name: Download streak card
-        run: |
-          curl -fsSL "https://streak-stats.demolab.com/?user=${{ github.repository_owner }}" -o profile/streak.svg
+          ua="Mozilla/5.0 (GitHub Actions; profile cards)"
 
-      # --- 42 badge (optional: uncomment if you want to snapshot it too) ---
-      # - name: Download 42 badge
-      #   run: |
-      #     curl -fsSL \
-      #       "https://badge.mediaplus.ma/greenbinary/masenjo" \
-      #       -o profile/42.svg
+          curl -fsSL -A "$ua" \
+            "https://github-profile-trophy.vercel.app/?username=${USERNAME}&theme=onedark&margin-w=10&margin-h=10&column=2" \
+            -o profile/trophies.svg
+
+          curl -fsSL -A "$ua" \
+            "https://github-readme-stats.vercel.app/api?username=${USERNAME}&show_icons=true&locale=en" \
+            -o profile/stats.svg
+
+          curl -fsSL -A "$ua" \
+            "https://github-readme-stats.vercel.app/api/top-langs?username=${USERNAME}&show_icons=true&locale=en&layout=compact" \
+            -o profile/top-langs.svg
+
+          curl -fsSL -A "$ua" \
+            "https://streak-stats.demolab.com/?user=${USERNAME}" \
+            -o profile/streak.svg
 
       - name: Commit cards
         run: |
+          set -euxo pipefail
+
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+
           git add profile/*.svg
+
+          # Si no hay cambios, no rompas el workflow
           git commit -m "Update README cards" || exit 0
+
+          # Evitar conflictos si snake ha pusheado justo antes
+          git pull --rebase
           git push
