--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -27,4 +27,6 @@ jobs:
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add output/*.svg
           git commit -m "Update snake" || exit 0
+          git pull --rebase
           git push
+
